--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,10 +10,11 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <body>
-        <div>Funcionalidades disponíveis:</div>
-        <p>HelloServlet.java (Método GET) (<a href=".\alomundo?lang=pt&nome=Fulano">link</a>)</p>
-        <p>Formulário de HelloWorld (usando o HelloServlet.java - Método POST) (<a href=".\helloform.html">link</a>)</p>
-        <p>Formulário de HelloWorld (usando o sayhello.jsp) (<a href=".\helloform2.html">link</a>)</p>
+    <body style="display: flex; flex-direction: column; align-items: center; text-align: center;">
+        <div style="color: black; border: 5px solid blueviolet; width:500px; background-color: white;">
+            <h1>Funcionalidades disponíveis:</h1>
+            <p>HelloServlet.java (Método GET) (<a href=".\alomundo?lang=pt&nome=Fulano&pronome=none">link</a>)</p>
+            <p>Formulário de Boas-Vindas (usando o HelloServlet.java - Método POST) (<a href=".\helloform.html">link</a>)</p>
+        </div>
     </body>
 </html>
